[gd_scene load_steps=3 format=3 uid="uid://my_order_row_component"]

[ext_resource type="Script" path="res://scenes/ui/components/MyOrderRow.gd" id="1_myorderrow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 0.5)

[node name="MyOrderRow" type="PanelContainer"]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_myorderrow")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item Name"
vertical_alignment = 1

[node name="DetailsHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/InfoVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PriceLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoVBox/DetailsHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
text = "1000 Gold"

[node name="QuantityLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoVBox/DetailsHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "x1"

[node name="RemoveButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "KaldÄ±r"
